[package]
name = "fraud-motor-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
fraud-motor-core = { version = "0.1.0", path = "../fraud-motor-core" }
rustyline = "12.0.0"
