[package]
name = "fraud-motor-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winnt", "handleapi", "minwindef", "processthreadsapi", "psapi", "memoryapi", "basetsd", "winerror"] }
